# convexfeld

./: CLAUDE.md  CMakeLists.txt  HANDOFF.md  LICENSE  README.md
.beads/: issues.jsonl
benchmarks/: CMakeLists.txt  bench_netlib.c  bench_tracer.c
benchmarks/netlib/: README.md  feasible_gurobi_1e-8.csv
benchmarks/netlib/feasible/: blend.mps  dfl001.mps  forplan.mps  gfrd-pnc.mps  sierra.mps
benchmarks/netlib/netlib_grbp/: p_25fv47.mps  p_80bau3b.mps  p_adlittle.mps  p_afiro.mps  p_agg.mps  p_agg2.mps  p_agg3.mps  p_bandm.mps  p_beaconfd.mps  p_blend.mps  p_bnl1.mps  p_bnl2.mps  p_boeing1.mps  p_boeing2.mps  p_bore3d.mps  p_brandy.mps  p_capri.mps  p_cre-a.mps  p_cre-c.mps  p_cre-d.mps  p_cycle.mps  p_czprob.mps  p_d2q06c.mps  p_d6cube.mps  p_degen2.mps  p_degen3.mps  p_dfl001.mps  p_e226.mps  p_etamacro.mps  p_fffff800.mps  p_finnis.mps  p_fit1d.mps  p_fit1p.mps  p_fit2d.mps  p_fit2p.mps  p_forplan.mps  p_ganges.mps  p_gfrd-pnc.mps  p_greenbea.mps  p_greenbeb.mps  (+68 more)
docs/: IMPLEMENTATION_PLAN.md  PRD.md  learnings.md  profiling.md
docs/inventory/: all_functions.md  module_assignment.md
docs/learnings/: README.md  gotchas.md  m0-m1_setup.md  m2-m4_foundation.md  m5-m6_core.md  m7-m8_simplex_api.md  patterns.md
docs/plan/: README.md  functions.md  m0_setup.md  m1_tracer.md  m2_foundation.md  m3_infrastructure.md  m4_data.md  m5_core.md  m6_algorithm.md  m7_simplex.md  m8_api.md  parallelization.md  structures.md
docs/specs/architecture/: data_flow.md  overview.md  state_machine.md
docs/specs/functions/api/: cxf_addconstr.md  cxf_addconstrs.md  cxf_addgenconstrindicator.md  cxf_addqconstr.md  cxf_addqpterms.md  cxf_addvar.md  cxf_addvars.md  cxf_chgcoeffs.md  cxf_copymodel.md  cxf_delvars.md  cxf_emptyenv.md  cxf_freeenv.md  cxf_freemodel.md  cxf_getcoeff.md  cxf_getconstrs.md  cxf_getdblattr.md  cxf_geterrormsg.md  cxf_getintattr.md  cxf_getintparam.md  cxf_loadenv.md  cxf_newmodel.md  cxf_optimize.md  cxf_optimize_internal.md  cxf_read.md  cxf_setcallbackfunc.md  cxf_setintparam.md  cxf_terminate.md  cxf_updatemodel.md  cxf_version.md  cxf_write.md
docs/specs/functions/basis/: cxf_basis_diff.md  cxf_basis_equal.md  cxf_basis_refactor.md  cxf_basis_snapshot.md  cxf_basis_validate.md  cxf_basis_warm.md  cxf_btran.md  cxf_ftran.md  cxf_pivot_with_eta.md  cxf_timing_refactor.md
docs/specs/functions/callbacks/: cxf_callback_terminate.md  cxf_check_terminate.md  cxf_init_callback_struct.md  cxf_post_optimize_callback.md  cxf_pre_optimize_callback.md  cxf_reset_callback_state.md  cxf_set_terminate.md
docs/specs/functions/crossover/: cxf_crossover.md  cxf_crossover_bounds.md
docs/specs/functions/matrix/: cxf_dot_product.md  (+6 more)
docs/specs/modules/: 01_memory.md  02_validation.md  03_error_logging.md  04_parameters.md  05_matrix.md  06_threading.md  07_timing.md  08_statistics.md  09_callbacks.md  10_utilities.md  11_api.md  12_basis.md  13_pricing.md  14_ratio_test.md  15_pivot.md  16_simplex.md  17_crossover.md
docs/specs/structures/: basis_state.md  callback_context.md  cxf_env.md  cxf_model.md  eta_factors.md  pricing_context.md  solver_context.md  sparse_matrix.md
include/convexfeld/: convexfeld.h  cxf_basis.h  cxf_callback.h  cxf_env.h  cxf_matrix.h  cxf_model.h  cxf_mps.h  cxf_pricing.h  cxf_solve_state.h  cxf_solver.h  cxf_timing.h  cxf_types.h  cxf_utilities.h
reports/: api_params_compliance.md  basis_pivot_compliance.md  callbacks_validation_stats_compliance.md  error_logging_threading_compliance.md  matrix_memory_compliance.md  pricing_ratio_compliance.md  review_arch_algorithm.md  review_arch_integration.md  review_arch_structures.md  review_code_quality.md  review_linus.md  review_smells.md  review_spec_api.md  review_spec_basis.md  review_spec_error.md  review_spec_matrix.md  review_spec_memory.md  review_spec_pricing.md  review_spec_pricing_summary.txt  review_spec_support.md  review_tests.md  simplex_compliance.md
src/: placeholder.c
src/analysis/: coef_stats.c  model_type.c  presolve_stats.c
src/api/: api_stub.c  attrs_api.c  constr_stub.c  env.c  env_stub.c  info_api.c  io_api.c  model.c  model_stub.c  mps_build.c  mps_internal.h  mps_parse.c  mps_parser.c  mps_state.c  optimize_api.c  params_api.c  quadratic_api.c
src/basis/: basis_state.c  basis_stub.c  btran.c  eta_factors.c  ftran.c  lu_factorize.c  lu_factors.c  pivot_eta.c  refactor.c  snapshot.c  warm.c
src/callbacks/: callback_stub.c  context.c  init.c  invoke.c  terminate.c
src/error/: core.c  env_check.c  error_stub.c  model_flags.c  nan_check.c  pivot_check.c  terminate.c
src/logging/: format.c  output.c  system.c
src/matrix/: multiply.c  row_major.c  sort.c  sparse_matrix.c  sparse_stub.c  vectors.c
src/memory/: alloc.c  alloc_stub.c  state_cleanup.c  vectors.c
src/parameters/: params.c
src/pricing/: candidates.c  context.c  init.c  phase.c  pricing_stub.c  steepest.c  update.c
src/simplex/: cleanup.c  context.c  crash.c  iterate.c  perturbation.c  phase_steps.c  pivot_primal.c  pivot_special.c  post.c  quadratic.c  ratio_test.c  refine.c  setup.c  solve_lp.c  solve_lp_stub.c  step.c
src/solver_state/: extract.c  helpers.c  init.c
src/threading/: config.c  cpu.c  locks.c  seed.c  threading_stub.c
src/timing/: operations.c  sections.c  timestamp.c
src/utilities/: fix_var.c  helpers.c  math_wrappers.c
src/validation/: arrays.c  validation_stub.c
tests/: CMakeLists.txt
tests/integration/: test_constrained_lp.c  test_tracer_bullet.c
tests/unit/: test_analysis.c  test_api_constrs.c  test_api_env.c  test_api_model.c  test_api_optimize.c  test_api_query.c  test_api_vars.c  test_attrs_api.c  test_basis.c  test_callbacks.c  test_error.c  test_info_api.c  test_logging.c  test_lu_factors.c  test_matrix.c  test_memory.c  test_memory_vectors.c  test_mps_parser.c  test_mps_solve.c  test_parameters.c  test_params_api.c  test_pivot_check.c  test_pivot_eta.c  test_pricing.c  test_quadratic.c  test_simplex_basic.c  test_simplex_edge.c  test_simplex_iteration.c  test_simplex_setup.c  test_smoke.c  test_solver_state.c  test_threading.c  test_timing.c  test_validation.c
(+86 files in other folders)
